# Scheduler-of-Threads

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  run.sh
client/: CMakeLists.txt  Client  Readme.md
client/src/: main.c
client/src/infrastructure/services/: hello-world-service.c  hello_world_service.c  service.c  service.h
client/test/: dumbfile.txt  dumbfile_1.txt  dumbfile_2.txt  dumbfile_3.txt  test1.json  test2.json  test3.json
histogram/: Dockerfile  package-lock.json  package.json  tsconfig.json
histogram/components/histogram/: props.ts
histogram/src/: App.css  App.tsx  index.tsx
histogram/src/components/Histogram/: index.tsx  options.ts  props.ts  props.tsx
histogram/src/components/histogram/: index.tsx
histogram/src/infrastructure/models/: histogram.ts
histogram/src/infrastructure/services/: histogram-service.ts
histogram/src/store/: index.ts
histogram/src/store/action-creators/: histogram-action-creators.ts
histogram/src/store/action-types/: histogram-action-types.ts
histogram/src/store/actions/: histogram.ts  index.ts
histogram/src/store/reducers/: histogram.ts  index.ts
histogram/src/store/states/: histogram.ts  index.ts
histogram/src/views/Home/: index.tsx
histogram/src/views/home/: index.tsx
server/: CMakeLists.txt  Dockerfile
server/src/: main.c
server/src/api/controllers/: hello-world-controller.c  histogram-controller.c  histogram-controller.h  histrogram-controller.h  scheduler-controller.c  scheduler-controller.h
server/src/api/models/: histogram.c  histogram.h  lists.c  lists.h  process.c  process.h
server/src/api/routes/: routes.c  routes.h
server/src/data/accessors/: hello-world-accessor.c  histogram-accessor.c  histogram-accessor.h  quantum-accessor.h  quantum_accessor.c
server/src/data/models/: hello-world.c  histrogram.c  quantum.h  vowel-list.h
server/src/engines/: scheduling.c  scheduling.h
server/src/managers/: action-manager.c  action-manager.h  expo-manager.c  expo-manager.h  histogram-manager.c  histogram-manager.h  listener-manager.c  listener-manager.h  scheduler-manager.c  scheduler-manager.h  sheduler-manager.h  view-manager.c  view-manager.h
server/src/properties/: builderx.ui  const.h  enums.h
server/src/services/: scheduling.h
server/src/view/: builderx.ui
